--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grand Cinema</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -25,11 +27,31 @@
   <main id="main" class="main">
     <section class="welcome ">
       <div class="container">
-        <h2 class="welcome__heading">Дорамы с русской озвучкой смотреть онлайн.</h2>
-
-        <div class="welcome__links">
-          <a href="https://doramy.club/28864-8-podsnezhnik.html" class="link-primary">sign up</a>
-          <a href="https://www.instagram.com/ldh_sky/" class="link">Learn more</a>
+        <div class="slider">
+          <div>
+            <img src="./img/slider0.jpg" alt="">
+          </div>
+          <div>
+            <img src="./img/slider1.jpg" alt="">
+          </div>
+          <div>
+            <img src="./img/slider-3.jpg" alt="">
+          </div>
+          <div>
+            <img src="./img/slider2.jpg" alt="">
+          </div>
+          <div>
+            <img src="./img/slider3.jpg" alt="">
+          </div>
+          <div>
+            <img src="./img/slider4.jpg" alt="">
+          </div>
+          <div>/
+            <img src="./img/slider5.jpg" alt="">
+          </div>
+          <div>
+            <img src="./img/slider7.jpg" alt="">
+          </div>
         </div>
       </div>
     </section>
@@ -93,8 +115,8 @@
     <section class="tab-section common-section ">
       <div class="container">
         <div class="title-wrapper">
-          <h3 class="title">Tab Section</h3>
-          <p class="subtitle">This is some text inside of a div block.</p>
+          <h3 class="title">Скоро на экранах:</h3>
+          <p class="subtitle">Новая коллекция дорам в этом сезоне.</p>
         </div>
 
         <div class="tabs">
@@ -185,6 +207,10 @@
     </div>
   </footer>
 
+  
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="script.js"></script>
 </body>
 </html>
