--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
       <div class="container">
         <div class="title-wrapper">
           <h3 class="title">Рекомендации</h3>
-          <p class="subtitle">Бесплатыне дорамы:</p>
+          <p class="subtitle">Бесплатные дорамы:</p>
         </div>
 
         <div class="cards-wrapper">
@@ -84,6 +84,16 @@
             <h4>Лунные влюблённые: Алые сердца Корё</h4>
             <p>Cамостоятельной девушки-одиночки, которая не хочет жить, ведь семьи нет, а все, кого любила, предали её..</p>
           </div>
+          <div class="card">
+            <img src="./img/moy-sosed-kumiho-watch4.jpg" alt="icon">
+            <h4>Мой сосед — Кумихо</h4>
+            <p>Красивый и умный писатель Шин У Ё на самом деле является 999-летним девятихвостым лисом, или же, как его называют в народных поверьях, — демоном-кумихо.</p>
+          </div>
+          <div class="card">
+            <img src="./img/bumazhnyy-dom-koreya-2-1.jpg" alt="icon">
+            <h4>Бумажный дом</h4>
+            <p>Ограбление: Корея — Объединенная экономическая зона 2 / Бумажный дом: Единая экономическая зона 2 / Money Heist: Korea — Joint Economic Area Part 2 / The House of Paper: Korea — Joint Economic Area Part 2 / Jongieui Jib: Gongdongkyungjeguyeok 2</p>
+          </div>
         </div>
       </div>
     </section>
@@ -97,16 +107,19 @@
 
         <div class="cards-wrapper">
           <div class="card">
-            <img src="img/bumazhnyy-dom-koreya-2-1.jpg" alt="img">
-            <h4>Бумажный дом</h4>
-            <p>Ограбление: Корея — Объединенная экономическая зона 2 / Бумажный дом: Единая экономическая зона 2 / Money Heist: Korea — Joint Economic Area Part 2 / The House of Paper: Korea — Joint Economic Area Part 2 / Jongieui Jib: Gongdongkyungjeguyeok 2</p>
-            <a href="#!" class="link">Learn more</a>
+            <img src="./img/korean-flag.jpg" alt="img">
+            <h4>Korean doramas</h4>
+            <a href="./korea.html" class="link">Learn more</a>
           </div>
           <div class="card">
-            <img src="img/moy-sosed-kumiho-watch4.jpg" alt="img">
-            <h4>Мой сосед — Кумихо</h4>
-            <p>Красивый и умный писатель Шин У Ё на самом деле является 999-летним девятихвостым лисом, или же, как его называют в народных поверьях, — демоном-кумихо.</p>
-            <a href="#!" class="link">Learn more</a>
+            <img src="./img/China.jpg" alt="img">
+            <h4>Chinese doramas</h4>
+            <a href="./china.html" class="link">Learn more</a>
+          </div>
+          <div class="card">
+            <img src="./img/thailand.jpg" alt="img">
+            <h4>Thai lakorns</h4>
+            <a href="./thailand.html" class="link">Learn more</a>
           </div>
         </div>
       </div>
@@ -164,36 +177,32 @@
             Приятного просмотра! 💜</p>
         </div>
         <div class="footer__links">
-          <h4>useful links</h4>
+          <h4>Contacts</h4>
           <ul>
-            <li><a href="#!">Phasellus gravida semper nisi</a></li>
-            <li><a href="#!">Suspendisse nisl elit</a></li>
-            <li><a href="#!">Dellentesque habitant morbi</a></li>
-            <li><a href="#!">Etiam sollicitudin ipsum</a></li>
+            <li><a href="#!">+99655885820</a></li>
+            <li><a href="#!">+996707741989</a></li>
+            <li><a href="#!">+905517451323</a></li>
+            <li><a href="#!">+79519948076</a></li>
           </ul>
         </div>
         <div class="footer__social">
           <h4>social</h4>
           <ul>
             <li>
-              <img src="img/icon-tw.svg" alt="twitter">
-              <a href="#!">Twitter</a>
+              <img src="./img/insta.png" alt="">
+              <a href="https://www.instagram.com/_totoeva_7370/">Instagram</a>
             </li>
             <li>
-              <img src="img/icon-fb.svg" alt="facebook">
+              <img src="./img/icon-fb.svg" alt="">
               <a href="#!">Facebook</a>
             </li>
             <li>
-              <img src="img/icon-pt.svg" alt="pinterest">
-              <a href="#!">Pinterest</a>
+              <img src="./img/github.jpg" alt="">
+              <a href="https://github.com/aiday1/Grand-Cinema-WEB">Github</a>
             </li>
             <li>
-              <img src="img/icon-google.svg" alt="google">
-              <a href="#!">Google</a>
-            </li>
-            <li>
-              <img src="img/icon-wb.svg" alt="webflow">
-              <a href="#!">Webflow</a>
+              <img src="./img/telegram.png" alt="">
+              <a href="https://web.telegram.org/k/#@asadeless">Telegram</a>
             </li>
           </ul>
         </div>
