--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
       <nav class="header__nav">
         <ul>
-          <li><a href="#main">Home</a></li>
-          <li><a href="#footer">Contacts</a></li>
-        </ul>
+          
+          <li><a href="./korzina.html">Order</a></li>
+          <li><a class="nav-a" href="#main">Home</a></li>
+          <li><a class="nav-a" href="#footer">Contacts</a></li>
+          </ul>
       </nav>
     </div>
   </header>
